Typos korrigiert. Unvollständige Sätze überarbeitet. Korrekturanmerkungen Simon eingearbeitet. Urteil aus BB zu § 5 I 1 Nr. 4,1 SGO eingearbeitet.

--- a/Anrufung.tex
+++ b/Anrufung.tex
@@ -147,13 +147,13 @@ Eine tiefere Prüfung erfolgt bei der Entscheidung über Eröffnung nicht, sonde
 Hat das Schiedgericht von Anfang an Zweifel an der in der Anrufung dargeleten Begründung der Antragsbefugnis, ist das Verfahren dennoch zu eröffnen. Es bietet sich dann aber an, der anrufenden Partei einen richterlichen Hinweis zu geben, dass diese ihre Begründung diesbezüglich erweitern sollte.
 Das geht auch aus \S~8 Abs.~5, 6 Satz~1 SGO\index[paridx]{SGO!8@\S~8!5@Abs.~5} hervor. Dort wird bestimmt, wann das Verfahren zu eröffnen ist. Nämlich immer dann, wenn das angerufene Schiedsgericht zuständig ist und die Anrufung korrekt erfolgte.
 Korrekte Anrufung kann aber nur formelle Kriterien meinen, eine weitergehende, inhaltliche Prüfung zu diesem Zeitpunkt ist daher unzulässig.
-Die Antragsbefugnis ist damit ein echtes Zulässigkeitskriterium und erst nach durchgeführtem Verfahren im Endurteil zu bescheiden.
+Die Antragsbefugnis ist damit ein echtes Zulässigkeitskriterium und erst nach durchgeführtem Verfahren im Endurteil zu bescheiden, an die Anrufung selbst darf daher nur die Anforderung gestellt werden, dass die Möglichkeit einer solchen Antragsbefugnis in zumindest nicht gänzlich unplausibler Weise geltend gemacht wird.
 
 \subsection{Form}
 \label{Anrufung:Kriterien:Form}
 Die Anforderungen an die Form der Anrufung sind sehr gering.
 Es wird in \S~8 Abs.~3 SGO\index[paridx]{SGO!8@\S~8!3@Abs.~3} lediglich die Textform gefordert.
-Im Gegensatz zur Schriftform, deren Erfüllung und Nichterfüllung bei untergesetzlich vorgeschriebener Formerfordernis sehr strittig ist und auch in der Schiedsgerichtsbarkeit der Piratenpartei schon zu Entscheidungen führte,\footcite{LSGBB146} ist die Textform ausreicht klar und eindeutig in \S~126b BGB\index[paridx]{BGB!\S~126b} definiert und eine Formlockerung in \S~127 BGB\index[paridx]{BGB!\S~127} nicht vorgesehen.
+Im Gegensatz zur Schriftform, deren Erfüllung und Nichterfüllung bei untergesetzlich vorgeschriebener Formerfordernis sehr strittig ist und auch in der Schiedsgerichtsbarkeit der Piratenpartei schon zu Entscheidungen führte,\footcite{LSGBB146} ist die Textform ausreichend klar und eindeutig in \S~126b BGB\index[paridx]{BGB!\S~126b} definiert und eine Formlockerung in \S~127 BGB\index[paridx]{BGB!\S~127} nicht vorgesehen.
 Es reicht daher ein Schreiben, das mit dem Namen unterzeichnet ist und das in einer Form, die zur visuellen Widergabe des Inhalts geeignet ist (also auch z.B. eine E-Mail).
 
 \subsection{Frist}
@@ -209,12 +209,12 @@ Das wiederrum hängt auch damit zusammen, dass es keine Verweisung zwischen den 
 
 \subsubsection{Zuständigkeit bei Verfahren gegen ein Organ}
 \label{Anrufung:Kriterien:Zustaendigkeit:Organ}
-Organe haben -- juristisch streng genommen -- keine Zugehörigkeit, sondern sind Teil eines Verbandes und handeln für diesen.
-Man könnte zwar eine Zugehörigkeit im allgemeinen Sprachgebrauch konstruieren für den Verband, dessen Teil sie sind.
-Aber auch in diesem Fall leitet sich daraus keine Zugehörigkeit zu den höheren Verbänden ab.
-Daher würde die Sonderzuständigkeitsregelung nach \S~6 Abs.~3 SGO\index[paridx]{SGO!6@\S~6!3@Abs.~3} die Zuständigkeit des Bundesschiedsgerichts für Verfahren gegen Bundesorgane anordnet, die Zuständigkeit für Verfahren gegen Organ von Verbänden unterhalb der Landesebene offenlassen.
-Diese wäre dann nicht definiert. Das ist eine offensichtliche planwidrige Regelungslücke, da es nicht gewollt sein kann, dass Verfahren gegen untergeordnete Gliederungen unmöglich sind, zumal die Schiedsgerichtsordnung selbst in \S~2 Abs.~1 Satz~2 SGO\index[paridx]{SGO!2@\S~2!1@Abs.~1} nicht passivlegitimiert ist.
-Daher bietet sich eine analoge Anwendung der Zuständigkeitsregelungen für Organe nach \S~6 Abs.~3 SGO\index[paridx]{SGO!6@\S~6!3@Abs.~3} an: Das niedrigste Schiedsgericht auf gleicher oder höherer Verbandsebene wie das Organ, das Antragsgegner ist, ist zuständig.
+Organe haben -- juristisch streng genommen -- keine Mitgliedschaft in einem Verband, sondern sind Teil eines Verbandes und handeln für diesen.
+Man könnte zwar eine Mitgliedschaft eines Organs in einem Verband im allgemeinen Sprachgebrauch konstruieren für den Verband, dessen Teil sie sind.
+Aber auch in diesem Fall leitet sich daraus keine Mitgliedschaft in den höheren Verbänden ab, da \S~2 Abs.~1 Satz~2 PartG\index[paridx]{PartG!2@\S~2!1@Abs.~1} ganz eindeutig die Mitgliedschaft auf natürliche Personen limitiert.
+Daher lässt würde die Sonderzuständigkeitsregelung nach \S~6 Abs.~3 SGO\index[paridx]{SGO!6@\S~6!3@Abs.~3}, die die Zuständigkeit des Bundesschiedsgerichts für Verfahren gegen Bundesorgane sowie die Zuständigkeit der Landesschiedsgerichte für Verfahren gegen Landesorgane anordnet, die Zuständigkeit für Verfahren gegen Organe von Verbänden unterhalb der Landesebene offen.
+Das ist eine offensichtliche planwidrige Regelungslücke, da es nicht gewollt sein kann, dass Verfahren gegen untergeordnete Gliederungen unmöglich wird, nurweil das zuständige Gericht nicht determiniert werden kann, zumal die Einrichtung von Schiedsgerichten unterhalb der Landesebene in \S~2 Abs.~1 Satz~2 SGO\index[paridx]{SGO!2@\S~2!1@Abs.~1} explizit erlaubt wird.
+Deswegen drängt sich eine analoge Anwendung der Zuständigkeitsregelungen für Organe nach \S~6 Abs.~3 SGO\index[paridx]{SGO!6@\S~6!3@Abs.~3} auf: Das niedrigste Schiedsgericht auf gleicher oder höherer Verbandsebene wie das Organ, das Antragsgegner ist, ist nach SGO zuständig für Verfahren gegen ebendieses Organ.
 
 \subsubsection{Zuständigkeit bei Disziplinarverfahren}
 \label{Anrufung:Kriterien:Zustaendigkeit:Disziplinarverfahren}
@@ -246,17 +246,24 @@ Fehlt es an einem erfolglosen Schlichtungsversuch und ist dieser auch nicht entb
 
 \subsubsection{Ablauf}
 \label{Anrufung:Kriterien:Schlichtung:Ablauf}
-Die Schlichtung wird von den Parteien eigenständig durchgeführt, \S~7 Abs.~2 Satz~1 SGO.\index[paridx]{SGO!7@\S~7!2@Abs.~2}
+Die Schlichtung wird von den Parteien eigenständig durchgeführt, \S~7 Abs.~2 Satz~1 SGO\index[paridx]{SGO!7@\S~7!2@Abs.~2}.
 Daher ist der Ablauf nicht im Verantwortungs- oder Tätigkeitsbereich der Parteischiedsgerichte.
+Bei tieferer Betrachtung macht das auch Sinn:
+Ein Schiedsgericht, dass schon einen Schlichtungsversuch durchführt, muss im Zuge ebendieser Tätigkeit Vorschläge zur Einigung machen und sich so zumindest schon teilweise zum konkreten Sachverhalt positionieren.
+Dadurch könnte die gewünschte Neutralität eines Schiedsgerichtes verloren gehen.
+Gerade deswegen dürfen auch Richter, die schon als Schlichter aktiv waren, nicht als Richter im Folgeverfahren teilnehmen (vgl. auch \ref{Zusammensetzung:Spruchkoerper:Befangenheitsvermutung:Nr8}).
+
+Es wäre auch mit der Funktion eines mediativen Schlichters, den \S~7 SGO\index[paridx]{SGO!7@\S~7} vorsieht, nicht vereinbar, wenn der Schlichter zuerst unverbindliche Vorschläge machen würde und diese im späteren Verfahren den Parteien als Richter per Urteil aufzwingen könnte.
 
 \subsubsection{Auswirkungen}
 \label{Anrufung:Kriterien:Schlichtung:Auswirkungen}
-Die erfolglose Schlichtung ist Anrufungsvoraussetzung. Da eine Schlichtung auch Zeit in Anspruch nehmen kann, wird die Anrufungsfrist (vgl. \ref{Anrufung:Kriterien:Frist}) in der Zeit, in der eine Schlichtung versucht wird, gehemmt, \S~8 Abs.~4 Satz~4 SGO\index[paridx]{SGO!8@\S~8!4@Abs.~4}.
+Die erfolglose Schlichtung ist Anrufungsvoraussetzung.
+Da eine Schlichtung auch Zeit in Anspruch nehmen kann, wird die Anrufungsfrist (vgl. \ref{Anrufung:Kriterien:Frist}) in der Zeit, in der eine Schlichtung versucht wird, gehemmt, \S~8 Abs.~4 Satz~4 SGO\index[paridx]{SGO!8@\S~8!4@Abs.~4}.
 
 Das eröffnende Schiedsgericht muss also feststellen, ob ein erfolgloser Schlichtungsversuch unternommen wurde.
 Eine Schlichtung ist das ernsthafte Bemühen, auf konstruktivem Wege eine gütliche Einigung in einem Streit zu erreichen.\footnote{Vgl. Kommentierung des \S~7 SGO von Benjamin Siggel, \href{https://wiki.piratenpartei.de/Bundesschiedsgericht/Schlichtung}{https://wiki.piratenpartei.de/Bundesschiedsgericht/Schlichtung}.}
-Das kann bereits erfüllt sein, wenn sich eine Partei der Schlichtung verweigert oder diese immer wieder verzögert.
-
+Daher kann eine fehlgeschlagene Schlichtung bereits dann gegeben sein, wenn sich eine Partei der Schlichtung konsequent verweigert oder diese immer wieder verzögert und so einen effektiven Rechtsschutz der Gegenpartei verhindert.
+Das Schlichtungsverfahren soll kein Hindernis für den Rechtsschutz sein sondern ein weniger invasives Verfahren, in dem die Details zur Beilegung des Streits den Streitparteien überlassen werden und diese nicht von Dritten, dem Schiedsgericht, aufgezwungen werden.
 
 \subsubsection{Entbehrlickeit}
 \label{Anrufung:Kriterien:Schlichtung:Entbehrlickeit}
@@ -327,6 +334,7 @@ Den Parteien soll mitgeteilt werden:
 \end{enumerate}
 
 \subsection{Folgenden eines Eröffnungsbeschlusses}
+\label{Anrufung:Beschluss:EroeffnungFolgen}
 Die Schiedsgerichtsordnung startet das Verfahren mit dem Eröffnungsbeschluss.
 Das heißt, ab diesem Moment entsteht ein Prozessrechtsverhältnis zwischen dem eröffnenden Schiedsgericht und den Verfahrensparteien nach den Verfahrensregeln der Schiedsgerichtsordnung.
 Dieses Verfahren kann grundsätzlich nur durch ein Urteil abgeschlossen werden, \S~12 Abs.~1 SGO\index[paridx]{SGO!12@\S~12!1@Abs.~1}.\footnote{So explizit auch schon \cite[S.~2]{BSG20131204}.}
@@ -334,22 +342,35 @@ Das heißt auch, dass eine andere Beendigung dieses Prozessrechtsverhältnisses 
 Ausnahmen stellen hier selbständige Verfahren im einstweiligen Rechtsschutz vor,\footnote{Ausführlich zu Eigenständigkeit der Verfahren im einstweiligen Rechtsschutz \cite[S.~3]{LSGBB145} mit Verweis auf \cites[S.~4]{LSGHE20140423II} und die in \cites{BSG41114ES}{BSG3314EA} offensichtlich zum Ausdruck kommende Praxis des Bundesschiedsgerichtes, bestätigt von \cite[S.~2~f.]{BSG4214ESWiderspruch}.} die mit der einstweiligen Anordnung begründet werden, da es dort keine Eröffnung gibt, und mit dem Widerspruchsurteil oder der Verfristung seiner Beantragung beendet werden.
 
 Allerdings gab es in der Rechtsprechung bisher schon Abweichungen von diesem Schema.
-Das Bundesschiedsgericht ist in jüngster Zeit von Rücknehmbarkeit eines Eröffnungsbeschlusses ausgeganen, wenn seine Anforderungen nicht mehr erfüllt sind oder es noch nie waren und wendet dahingehend \S~10 Abs.~1 SGO analog an.\footnote{So \cite{BSGPP100127862}, allerdings ist unklar, wie das Bundesschiedsgericht diese Analogie begründet. Schon das vorhandensein einer planwidrigen Regelungslücke ist äußerst fraglich, allerdings ist es auch problematisch, aus einer Regelung zur Füllung einer solchen planwidrigen Regelungslücke ihr Gegenteil anzunehmen. Zudem hat das Bundesschiedsgericht hier die Antragsbefugnis fehlerhaft für ein Statthaftigkeitskriterium gehalten und sie nicht, wie es korrekt wäre, als echtes Zulässigkeitskriterium behandelt.}
+Das Bundesschiedsgericht ist in jüngster Zeit von Rücknehmbarkeit eines Eröffnungsbeschlusses ausgegangen, wenn seine Anforderungen nicht mehr erfüllt sind oder es noch nie waren und wendet dahingehend wohl \S~10 Abs.~1 SGO analog an.\footnote{So etwa \cite{BSGPP100127862}.}
+Gerade im Prozessrecht mit seinen feinen Regelungen des Verfahrensablaufs ist es äußerst problematisch und begründungsbedürftig, wenn aus dem Vorhandensein der Regelung eine Kompetenz zu einem exakt gegenlaufenden Beschluss abgeleitet wird.
+Zudem hat das Bundesschiedsgericht hier die tatsächliche Antragsbefugnis fehlerhaft für ein Statthaftigkeitskriterium gehalten und sie nicht, wie es korrekt wäre, als echtes Zulässigkeitskriterium behandelt (vgl. \ref{Anrufung:Kriterien:Antragsbefugnis}).
 
-In älterer Rechtsprechung war das Bundesschiedgericht daher der Überzeugung, dass eine solche Rücknahme nicht möglich ist, es sei denn, dass der Eröffnungsbeschluss schon explizit unter einem Vorbehalt bestehender aus einer mit einer Frist versehenen Nachbesserungsaufforderung getroffen wurde.\footnote{\cite[S.~2]{BSG20130715} zu \cite{LSGNRW2013011}, in welchem das Bundesschiedsgericht einen solchen Vorbehalt erfüllt sah.}
+In älterer Rechtsprechung war das Bundesschiedgericht daher der Überzeugung, dass eine solche Rücknahme nicht möglich ist, es sei denn, dass der Eröffnungsbeschluss schon explizit unter einem Vorbehalt bestehender aus einer mit einer Frist versehenen Nachbesserungsaufforderung getroffen wurde und damit selbst bedingt war.\footnote{Vgl. \cite[S.~2]{BSG20130715} zu \cite{LSGNRW2013011}, in welchem das Bundesschiedsgericht einen solchen Vorbehalt erfüllt sah.}
 
 Unter Anbetracht des Wortlauts der Schiedsgerichtsordnung ist die neuere Ansicht des Bundesschiedsgerichtes nicht haltbar.
-Es fehlt schlicht an der notwendigen planwidrigen Regelungslücke, die Vorraussetzung jeder Analogie ist.
-Es gibt auch bei einem Eröffnungsbeschluss, der trotz Nichterfüllung der Anrufungskriterien oder in Unzuständigkeit getroffen wurde, die Möglichkeit, das Verfahren und damit das Prozessrechtsverhältnis wegen Unzulässigkeit jederzeit mittels Urteil zu beenden.
-Es bedarf daher schon gar keiner Analogie.
+Es bedarf schon gar keiner Analogie, da es schlicht an der notwendigen planwidrigen Regelungslücke fehlt, die aber Vorraussetzung jeder Analogie ist.
+Es gibt auch bei einem Eröffnungsbeschluss, der trotz Nichterfüllung oder bei Wegfall der Anrufungskriterien oder in Unzuständigkeit getroffen wurde, die Möglichkeit, das Verfahren und damit das Prozessrechtsverhältnis wegen Unzulässigkeit mittels Urteil zu beenden.
 
 \section{Sonderfall Verfahrensverweisung}
 \label{Anrufung:Verweisung}
 Einen Sonderfall der Anrufung stellt die Verfahrensverweisung nach \S~6 Abs.~5 SGO\index[paridx]{SGO!6@\S~6!5@Abs.~5} dar. Hier kommt es auf den Zustand des Verfahrens vor Verweisung an.
 
-Ist das Verfahren vor Verweisung noch nicht eröffnet gewesen, muss das Zielgericht über die Eröffnung entscheiden, als wäre es selbst angerufen. Dabei muss so vorgegangen werden, als wären die Anrufung statt an das Ursprungsgericht direkt an das Zielgericht gegangen. Dies ist insbesondere für die Berechnung der Anrufungsfristen relevant. Allerdings ist eine Verzögerung durch das Ursprungsgericht nicht der anrufenden Streitpartei zulasten zu legen.
+Ist das Verfahren vor Verweisung noch nicht eröffnet gewesen, muss das Zielgericht über die Eröffnung entscheiden, als wäre es selbst angerufen.
+Dabei muss so vorgegangen werden, als wären die Anrufung statt an das Ursprungsgericht direkt an das Zielgericht gegangen.
+Dies ist insbesondere für die Berechnung der Anrufungsfristen relevant.
+Allerdings ist eine Verzögerung durch das Ursprungsgericht nicht der anrufenden Streitpartei zulasten zu legen.
 
-Ist das Verfahren bereits vor Verweisung eröffnet gewesen, ist das Zielgericht an diese Entscheidung gebunden und muss das Verfahren entsprechend fortsetzen. Es sollte trotzdem analog zum Eröffnungsbeschluss ein Übernahmebeschluss getroffen werden und die Verfahrensübernahme den Streitparteien mitgeteilt werden. In dieser Übernahmemitteilung sollten den Parteien alle Mitteilungen gemacht werden, die sonst im Eröffnungsbeschluss getätigt werden (vgl. \ref{Anrufung:Beschluss:Eroeffnung}), um ein ordentliches Verfahren zu gewähren. Die Vorschriften über die Eröffnung sind dabei mangels eigener Regelung für die Verweisung analog anzuwenden.
+Ist das Verfahren bereits vor Verweisung eröffnet gewesen, ist das Zielgericht an diese Entscheidung gebunden und muss das Verfahren entsprechend fortsetzen.
+Es sollte trotzdem analog zum Eröffnungsbeschluss ein Übernahmebeschluss getroffen werden und die Verfahrensübernahme den Streitparteien mitgeteilt werden.
+In dieser Übernahmemitteilung sollten den Parteien alle Mitteilungen gemacht werden, die sonst im Eröffnungsbeschluss getätigt werden (vgl. \ref{Anrufung:Beschluss:Eroeffnung}), um ein ordentliches Verfahren zu gewähren
+Die Vorschriften über die Eröffnung sind dabei mangels eigener Regelung für die Verweisung analog anzuwenden.
+
+Eine besondere Aufmerksamkeit gilt fehlerhaften Verweisungsbeschlüssen:
+Diese sind gültig und mangels Rechtsmittelfähigkeit auch nicht im Instanzenzug isoliert angreifbar.
+Ein fehlerhafter Verweisungsbeschluss ist daher rechtswirksam und begründet die Zuständigkeit des Zielgerichtes.\footnote{Vgl. dazu auch TODO:cite GVG BB 13/1?.}
+Auch dürfte eine derartige Entscheidung nie vor der ordentlichen Gerichtsbarkeit landen, da immer das Bundesschiedsgericht letzinstanzlich zu Entscheiden hat und eine Beschwer daher nur von dessen Entscheidung ausgehen kann, die dann aber, auch weil das Bundesschiedsgericht eine vollständige Tatsacheninstanz ist, nicht mehr durch den möglichen Entzug des gesetzlichen Richters belastet ist.
+
 
 \chapterbib
 % \end{refsection}
