--- a/Gerichtszusammensetzung.tex
+++ b/Gerichtszusammensetzung.tex
@@ -1,6 +1,7 @@
 \chapterpreamble{Innerhalb des Organs „Schiedsgericht“, das sich zusammensetzt aus den gewählten Richtern und Ersatzrichtern, stellen die mit dem jeweiligen Verfahren befassten Richter das (entscheidende) „Schiedsgericht“ dar. Die genaue Zusammensetzung ergibt sich aus der Eigenschaft als Schiedsrichter oder (im Fall von Kammersystemen) aus der Geschäftsordnung. Die Zusammensetzung muss von vorn herein feststehen und darf nicht willkürlich verändert werden. Ein einmal befasster Richter kann regelmäßig nur durch Ausschluss aus dem konkreten Verfahren (typischerweise wegen Besorgnis der Befangenheit), generelle Beurlaubung oder Rücktritt vom Amt aus einem Verfahren ausscheiden. Ein temporäres Ausscheiden und spätere Wiederbefassung kommt ebensowenig in Betracht wie eine Rücktritt nur für ein einzelnes Verfahren. Ablehnungsanträge (Anträge auf Feststellung der Besorgnis der Befangenheit) müssen sich immer gegen jeweils eine konkrete Person richten und müssen einzeln (im Zweifel in der zeitlichen Reihenfolge der Antragstellung) entschieden werden. Näheres legt \S~5~SGO\index[paridx]{SGO!\S~5} fest.}
 
 \chapter{Zusammensetzung des Schiedsgerichts}
+\label{Zusammensetzung}
 %\section{Organ}
 %\subsection{Mitglieder des Schiedsgerichts}
 %Richter ./. Ersatzrichter
@@ -10,7 +11,7 @@
 Das Schiedsgericht ist zwar kein Organ\index[idx]{Organ} im Sinne des \S~8 Abs.~2 PartG\index[paridx]{PartG!8@\S~8!2@Abs.~2}\footnote{\cite[\S~14 Rn.~3]{ipsen2008parteiengesetz}}, da es nicht der originiären politischen Willensbildung der Partei dient, allerdings ist es grundsätzlich ein Organ im weiteren Sinne.
 Dementsprechend haben die Satzungen der Piratenparteien und ihrer Untergliederungen das Schiedsgericht typischerweise auch als Organ bezeichnet.\footnote{MISSING: Satzungen}
 
-\section{Das Organ Schiedsgericht und seine Zusammensetzung}
+\section{Das Schiedsgericht als Organ}
 \label{Zusammensetzung:Organ}
 Das Organ setzt sich zusammen aus allen gewählten Richtern und Ersatzrichtern.
 Für das Organ selbst gibt es dabei noch keine Unterscheidung in der Titelqualität.
@@ -20,14 +21,14 @@ Auch etwa gemeinsam formulierte Standardsschreiben, die Zuständigkeiten für di
 Nicht dazu gehört allerdings die Wahl des Vorsitzenden Richters.
 Die Schiedsgerichtsordnung hat diese in \S~3 Abs.~1 Satz~2 SGO\index[paridx]{SGO!3@\S~3!1@Abs.~1} allein in die Hände der Richter gelegt, die Ersatzrichter haben hierbei weder aktives noch passives Wahlrecht.
 
-\section{Der Spruchkörper Schiedsgericht und seine Zusammensetzung}
+\section{Das Schiedsgericht als Spruchkörper}
 \label{Zusammensetzung:Spruchkoerper}
 Das Schiedgericht im Sinne des entscheidenen Spruchkörpers\index[idx]{Spruchkörper|textbf} für konkrete Verfahren setzt sich dahingegen nach \SSS~3--5 SGO\index[paridx]{SGO!\S~3}\index[paridx]{SGO!\S~4}\index[paridx]{SGO!\S~5} zusammen. Dabei ist im Folgenden mit Schiedsgericht nicht mehr das Organ, sondern der Spruchkörper für eine konkrete Anrufung gemeint.
 
 \subsection{Besetzung}
 \label{Zusammensetzung:Spruchkoerper:Besetzung}
 Dieser besteht standardmäßig aus den gewählten drei Richtern.
-Sobald einer dieser Richter sein Amt gemäß \S~3 Abs.~7, 8 SGO\index[paridx]{SGO!3@\S~3!7@Abs.~7} dauerhaft nach und wird Teil des standardmäßigen Spruchkörpers.
+Sobald einer dieser Richter sein Amt gemäß \S~3 Abs.~7, 8 SGO\index[paridx]{SGO!3@\S~3!7@Abs.~7} verliert, rückt ein Ersatzrichter dauerhaft nach und wird Teil des standardmäßigen Spruchkörpers.
 Zur Unterscheidung von Ersatzrichtern, die weiterhin diese Rolle haben, ist er ab diesem Zeitpunkt so zu behandeln, als wäre er ursprünglich als Richter gewählt worden.
 Er erhält damit passives und aktives Wahlrecht bei der Wahl des Vorsitzenden Richters\index[idx]{Vorsitzender Richter}.
 Dies ist einerseits schon durch das Wort \enquote{dauerhaft} nahegelegt, dass es einen rechtlichen Unterschied zum nur temporären Einrücken in ein einzelnes Verfahren nach \S~4 Abs.~4 SGO\index[paridx]{SGO!4@\S~4!4@Abs.~4} erlaubten erhöhten Ersatzrichterzahl sogar zu einer Situation kommen könne, in der kein verbleibendes Mitglied des Schiedsgerichts aktives oder passives Wahlrecht für die Wahl des Vorsitzenden Richters hätte.
@@ -68,7 +69,7 @@ Daher müsste bei einer derartigen Verfahrensweise der verbleibende Richter sich
 Auch lässt sich der Wortlaut \enquote{ein befangener oder ausgeschlossener Richter} dahingehend deuten, dass \enquote{ausgeschlossener Richter} diejenigen umfasst, die schon per Beschluss ausgeschlossen wurden und \enquote{befangener […] Richter} diejenigen umfasst, die selbst in einer Entscheidung tatsächlich und unzweifelhaft befangen sind. Letzteres würde aufgrund des Grundsatzes, dass niemand Richter in eigener Sache sein darf, wohl unzweifelhaft zutreffen, sodass auch eine derartige Auslegung des \S~4 Abs.~2 mit dem Wortlaut vereinbar ist.
 Daher rückt der in der Reihenfolge nächste Ersatzrichter schon für den Beschluss über den Ausschluss eines Richters ein.
 
-Diese Vorgehensweise, obschon nie ausführlich begründet, entspricht auch der jahrelangen Praxis des Bundesschiedsgerichtes.\footnote{MISSING DERP}
+Diese Vorgehensweise, obschon nie ausführlich begründet, entspricht auch der jahrelangen Praxis des Bundesschiedsgerichtes.\footnote{MISSING: Entscheidungen}
 
 \subsection{Änderung durch Ausschluss eines Richters wegen Untätigkeit}
 \label{Zusammensetzung:Spruchkoerper:Untaetigkeit}
@@ -86,21 +87,25 @@ Der Ausschluss eines Richters wegen Krankheit gemäß \S~4 Abs.~3 Satz~1 Alt.~1 
 Hier kommt regelmäßig eine Ablehnung schon gar nicht in Betracht.
 Wenn ein Richter sich dem Gericht gegenüber krank meldet, ist dies hinzunehmen und den Parteien mitzuteilen.
 Die Krankmeldung ist dabei zu den Akten zu nehmen.
-Es erfordert somit regelmäßig gerade keinen Beschluss über die Krankheit.
+Es ist somit regelmäßig gerade keinen Beschluss über den Ausschluss wegen Krankheit zu treffen.
 Der Ausschluss ist auch insofern anders, als dass er für alle aktuell laufenden Verfahren gilt und abgesehen von der Mitteilung an die Parteien nicht für jedes Verfahrens ein eigenes Prozedere erfordert.
 Die Meldung der Krankheit ist daher eine temporäre Amtsniederlegung.
+
 Allerdings ist die Schiedsgerichtsordnung an dieser Stelle hochproblematisch, da sie von einem lediglich temporären Ausscheiden und der Möglichkeit der Rückkehr in das Verfahren ausgeht.
-Dies würde Prozesstaktiken ermöglichen, die defacto einer parteigetriebenen Richterauswahl nahekommen, indem das Verfahren von Seite der Streitpartei versucht wird, zu beschleunigen oder zu verzögern.
-Daher muss davon ausgegangen werden, dass die entsprechende Satzungsbestimmung wegen Verstoß gegen das Verbot des Entzugs des gesetzlichen Richters unwirksam ist.\footnote{So schon \cite[299]{BVerfGE17294}: \Zitat{Art.~101 Abs.~1 Satz~2~GG soll der Gefahr vorbeugen, daß die Justiz durch eine Manipulierung der rechtsprechenden Organe sachfremden Einflüssen ausgesetzt wird, insbesondere daß im Einzelfall durch die Auswahl der zur Entscheidung berufenen Richter ad hoc das Ergebnis der Entscheidung beeinflußt wird, gleichgültig, von welcher Seite die Manipulierung ausgeht}.}
+Dies würde Prozesstaktiken ermöglichen, die defacto einer parteigetriebenen Richterauswahl nahekommen, indem von Seite einer Streitpartei versucht wird, das Verfahren zu beschleunigen oder zu verzögern und so mit oder ohne den kranken Richter zum Abschluss zu bringen. 
+
+Daher muss davon ausgegangen werden, dass die entsprechende Satzungsbestimmung über die Rückkehr eines ehemals kranken und deswegen ausgeschiedenen Richters in laufende Verfahren wegen Verstoß gegen das Verbot des Entzugs des gesetzlichen Richters unwirksam ist. Der gesetzliche Richter nach Art.~101 Abs.~1 Satz~2~GG\index[paridx]{GG!101@Art.~101!1@Abs.~1} soll der Gefahr vorbeugen, daß die Justiz durch eine Manipulierung der rechtsprechenden Organe sachfremden Einflüssen ausgesetzt wird, insbesondere daß im Einzelfall durch die Auswahl der zur Entscheidung berufenen Richter ad hoc das Ergebnis der Entscheidung beeinflußt wird, gleichgültig, von welcher Seite die Manipulierung ausgeht.\footnote{So schon \cite[299]{BVerfGE17294}.}
+
 Auch angesichts typischer Verfahrensdauern im Rahmen der erlaubten Verfahrensmaximalsolldauer ist jeder Zeitraum, der überhaupt zu einem temporären Ausscheiden eines Richters führt, schon so relevant, dass das Verfahren vom eingerückten Ersatzrichter maßgeblich mitbeeinflusst werden konnte.
 Daher muss auch dieser weiterhin dem Spruchkörper angehören.
-Entsprechend kann ein einmal ersetzter Richter nicht wieder in ein Verfahren zurückkehren, sobald den Parteien sein Ausscheiden und das Eintreten eines Ersatzrichters mitgeteilt wurde.\footnote{So auch etwa \cite[Eschelbach][\S~15 Rn~31]{BVerfGGMitarbeiterKommentar} entsprechend für das Bundesverfassungsgericht. Dieser geht davon aus, dass ein Rückkehr in die Richterolle im Spruchkörper für den Vorsitzenden nur dann möglich ist, wenn er lediglich in seiner Rolle als Vorsitzener etwa wegen Heiserkeit, nicht aber in der Rolle als Richter gänzlich wegfiel.}
+
+Deswegen kann ein einmal ersetzter Richter nicht wieder in ein Verfahren zurückkehren, sobald den Parteien sein Ausscheiden und das Eintreten eines Ersatzrichters mitgeteilt wurde.\footnote{So auch etwa \cite[Eschelbach][\S~15 Rn~31]{BVerfGGMitarbeiterKommentar} entsprechend für das Bundesverfassungsgericht. Dieser geht davon aus, dass ein Rückkehr in die Richterolle im Spruchkörper für den Vorsitzenden nur dann möglich ist, wenn er lediglich in seiner Rolle als Vorsitzener etwa wegen Heiserkeit, nicht aber in der Rolle als Richter gänzlich wegfiel.}
 
 \subsection{Änderung durch Ausschluss eines Richters wegen Beurlaubung}
 \label{Zusammensetzung:Spruchkoerper:Urlaub}
 In die selbe Kategorie wie der Ausschluss eines Richters wegen Krankheit fällt der Ausschluss eines Richters wegen Beurlaubung gemäß \S~4 Abs.~3 Satz~1 Alt.~2 SGO.\index[paridx]{SGO!4@\S~4!3@Abs.~3}
 Hier gelten aber die Bedenken über die Prozessmanipulation in Richtung einer effektiv parteigetriebenen Richterauswahl umso mehr, da das Ende der voraussichtlichen Abwesenheit noch besser vorhersehbar ist.
-Daher muss hier das gleiche gelten: Die Regelung ist bezüglich des Widereinstritts eines beurlaubten Richters in das Verfahren unwirksam und ein Widereinstritt ausgeschlossen, sobald den Parteien sein Ausscheiden und das Eintreten eines Ersatzrichters mitgeteilt wurde.
+Daher muss hier das gleiche gelten: Die Regelung ist bezüglich des Wiedereinstritts eines beurlaubten Richters in das Verfahren unwirksam und ein Wiedereinstritt ausgeschlossen, sobald den Parteien sein Ausscheiden und das Eintreten eines Ersatzrichters mitgeteilt wurde.
 
 \subsection{Änderung durch Ausschluss eines Richters wegen Besorgnis der Befangenheit}
 \label{Zusammensetzung:Spruchkoerper:Befangenheitsbesorgnis}
@@ -134,8 +139,9 @@ Beiden Parteien daraufhin noch eine Gelegenheit zur Stellungnahme zu geben, \S~5
 Für den Beschluss, ob ein Richter im Verfahren bleibt, oder wegen Besorgnis der Befangenheit aus dem Verfahren ausscheidet, muss entschieden werden, ob ein neutraler, objektiver, fiktiver Dritter, der in Kenntnis der Tatsachen zu entscheiden hätte, einen gerechtfertigten Grund hätte, an dem Unparteilichkeit des Richters zu zweifeln, \S~5 Abs.~2 Satz~2.\index[paridx]{SGO!5@\S~5!2@Abs.~2}
 Dies ist noch nicht erfüllt, wenn der Richter einer speziellen parteiinternen Organisation oder einem Flügel angehört.\footnote{\cite[S.~6]{BSG115HSBefangeheitIII}.}
 Ebenfalls genügt dafür nicht, dass der Richter sich bereits früher mal über eine verfahrensrelevante Rechtsfrage geäußert hat,\footnote{\cite{BGHXIZR38801}.} die Partei muss dann damit leben, dass ihr gesetzlicher Richter in einem rechtlichen Meinungsstreit eine gewisse Position vertritt.
-Erst Recht gilt dies in einer Partei, die ihre Richter aus dem Pool aktiver Mitglieder rektrutiert.\footnote{\cites[Lenski][\S~14 Rn~15]{lenski2011parteiengesetz}.}
-Erst recht liegt keine Besorgnis der Befangenheit vor, weil eine Partei davon ausgeht, dass ein Richter anders als von ihr gewünscht entscheiden wird. Unerwünschte Entscheidungen sind bei Gerichten der Regelfall.\footnote{\cites[S.~2]{BSG201305062BefangenheitI}.}
+Insbesondere gilt dies in einer Partei, die ihre Richter aus dem Pool aktiver Mitglieder rektrutiert.\footnote{\cites[Lenski][\S~14 Rn~15]{lenski2011parteiengesetz}.}
+Erst recht liegt keine Besorgnis der Befangenheit vor, weil eine Partei davon ausgeht, dass ein Richter anders als von ihr gewünscht entscheiden wird.
+Unerwünschte Entscheidungen sind bei Gerichten der Regelfall.\footnote{\cites[S.~2]{BSG201305062BefangenheitI}.}
 
 \subsubsection{Rechtsmissbräuchlichkeit der Ablehnung}
 \label{Zusammensetzung:Spruchkoerper:Befangenheitsbesorgnis:Rechtsmissbrauch}
@@ -190,47 +196,51 @@ Andernfalls könnte mit derartigen Anträgen das Gericht bis zum Rande der Arbei
 
 \subsubsection{Anwendung des Regelung zur dienstlichen Stellungnahme und Parteistellungnahme}
 \label{Zusammensetzung:Spruchkoerper:Befangenheitsvermutung:Stellungnahme}
-Die dienstliche Stellungnahme selbst dient der Aufklärung des Tatbestandes und ist daher anzuwenden.
+Die Regelung über die dienstliche Stellungnahme und die abschließenden Parteistellungnahme nach \S~5 Abs.~2 Satz~2, 3 SGO.\index[paridx]{SGO!5@\S~5!2@Abs.~2} dient der Aufklärung des Tatbestandes und der Erfüllung des grundrechtsgleichen Rechts auf rechtlichen Gehör und sind daher anzuwenden.
 Ebenfalls dient sie dazu, den Parteien ihre Stellungnahme jeweils erst zu ermöglichen.
-Diese wiederrum ist aus dem von der Verfassung garantierten Recht auf rechtliches Gehör nach Art.~103 Abs.~1 GG\index[paridx]{GG!Art.~103!Abs.~1} geboten.
-Es wird über eine Änderung ihrer Gerichtsbesetzung entschieden, daher sind die Parteien anzuhören.
-Die Regelung über die dienstliche Stellungnahme und die abschließenden Parteistellungnahme nach \S~5 Abs.~2 Satz~2, 3 SGO.\index[paridx]{SGO!5@\S~5!2@Abs.~2}
+Diese wiederrum ist aus dem von der Verfassung garantierten rechtlichen Gehörs nach Art.~103 Abs.~1 GG\index[paridx]{GG!103@Art.~103!1@Abs.~1} geboten.
 
 \subsubsection{Anwendung der Besetzungsregelung}
 \label{Zusammensetzung:Spruchkoerper:Befangenheitsvermutung:Besetzung}
-Die Besetzungregelung wäre schon aufgrund der allgemeinen juristischen Prozessgrundsätze geboten (Siehe schon \ref{Zusammensetzung:Spruchkoerper:Besetzungausschlussbeschluss}), allerdings ist die Grundlage hier \S~5 Abs.~1 Satz~2 SGO\index[paridx]{SGO!5@\S~5!1@Abs.~1}.
+Die Besetzungregelung wäre schon aufgrund der allgemeinen juristischen Prozessgrundsätze geboten (Siehe schon \ref{Zusammensetzung:Spruchkoerper:Besetzungausschlussbeschluss}), allerdings liegt die analoge Anwendung des \S~5 Abs.~1 Satz~2 SGO\index[paridx]{SGO!5@\S~5!1@Abs.~1} näher als die Anwendung allgemeiner juristischer Grundsätze, daher ist dieser hier die Grundlage.
 
 \subsubsection{Anwendung der Rechtsmittel}
 \label{Zusammensetzung:Spruchkoerper:Befangenheitsvermutung:Rechtsmittel}
-Gegen die Anwendung der Rechtsmittelregelungen in \S~5 Abs.~6 SGO\index[paridx]{SGO!5@\S~5!6@Abs.~6} anzuwenden.
+Gegen die Anwendung der Rechtsmittelregelungen in \S~5 Abs.~6 SGO\index[paridx]{SGO!5@\S~5!6@Abs.~6} gibt es keine Einwände. Im Gegenteil, es ist nicht einzusehen, warum das der Wahrung einer einheitlichen Auslegung und Rechtsprechung im Falle eines satzungsmäßigen Richterausschlusses nicht anzuwenden sein sollte.
+Eine derartige Verkürzung des Rechtsschutzes erscheint wegen der gleichlaufenden Interessen in beiden Fällen nicht angemessen.
 
 \subsubsection{Grundegendes zu den Tatbeständen}
 \label{Zusammensetzung:Spruchkoerper:Befangenheitsvermutung:Tatbestandsgrundsaetze}
 Jeder der Tatbestände des \S~5 Abs.~1 Satz~1 SGO\index[paridx]{SGO!5@\S~5!1@Abs.~1} stellt eine satzungsmäßige, unwiderlegliche Vermutung der Befangenheit des Betroffenen Richters auf.
-Es kommt somit für die einzelnen Tatbestände nicht mehr darauf an, ob ein neutraler objektiver Prozessfremder Beobachter nach verständiger Würdigung der Details Zweifel an der Unparteilichkeit eines Richters haben kann.
-Sobald der Tatbestand erfüllt ist, ist ein Richter von der Mitwirkung ausgeschlossen.
+Es kommt somit für die einzelnen Tatbestände nicht mehr darauf an, ob ein neutraler objektiver, prozessfremder Beobachter nach verständiger Würdigung der Umstände berechtigte Zweifel an der Unparteilichkeit eines Richters haben kann.
+Sobald der Tatbestand erfüllt ist, ist ein Richter von der Mitwirkung am Verfahren auszuschließen.
 
-Die Regelung ist an die staatlichen Prozessordnungen angelehnt.\footnote{Vgl. etwa \S~41 ZPO\index[paridx]{ZPO!\S~41},  \S~22 StPO\index[paridx]{StPO!\S~22}\nomenclature{StPO}{Strafprozessordnung}, \S~54 VwGO\index[paridx]{VwGO!\S~54}\nomenclature{VwGO}{Verwaltungsgerichtsordnung}, \S~51 FGO\index[paridx]{FGO!\S~51}\nomenclature{FGO}{Finanzgerichtsordnung}, \S~60 SGG\index[paridx]{SGG!\S~60}\nomenclature{SGG}{Sozialgerichtsgesetz} und \S~19 BVerfGG\index[paridx]{BVerfGG!\S~19}\nomenclature{BVerfGG}{Bundesverfassungsgerichtsgesetz}.}
-Diese Regelungen kommen aufgrund der vom Satzungsgeber getätigten Regelung in \S~5 Abs.~1 SGO\index[paridx]{SGO!5@\S~5!1@Abs.~1}.
-Grundsätzlich lässt sich sagen, dass eine Richterablehnung, die nicht durch einen Antrag auf Festsstellung der Besorgnis der Befangenheit nach \S~5 Abs.~2 Satz 1 Alt.~1, Satz~2 SGO\index[paridx]{SGO!5@\S~5!2@Abs.~2} gefüllt werden darf.
-Daher ist die Richterablehnung tatsächlich ein Gebiet der SGO, in der von einer vollständigen Regelung des Satzungsgebers auszugehen ist und Analogien grundsätzlich nicht in Betracht kommen.
+Die Regelung ist an dabei die staatlichen Prozessordnungen angelehnt.\footnote{Vgl. etwa \S~41 ZPO\index[paridx]{ZPO!\S~41},  \S~22 StPO\index[paridx]{StPO!\S~22}\nomenclature{StPO}{Strafprozessordnung}, \S~54 VwGO\index[paridx]{VwGO!\S~54}\nomenclature{VwGO}{Verwaltungsgerichtsordnung}, \S~51 FGO\index[paridx]{FGO!\S~51}\nomenclature{FGO}{Finanzgerichtsordnung}, \S~60 SGG\index[paridx]{SGG!\S~60}\nomenclature{SGG}{Sozialgerichtsgesetz} und \S~19 BVerfGG\index[paridx]{BVerfGG!\S~19}\nomenclature{BVerfGG}{Bundesverfassungsgerichtsgesetz}.}
+Diese Regelungen kommen aufgrund der vom Satzungsgeber getätigten Regelung in \S~5 Abs.~1 SGO\index[paridx]{SGO!5@\S~5!1@Abs.~1} nicht in Betracht für eine analoge Anwendung.
+\S~14 Abs.~4 PartG\index[paridx]{PartG!14@\S~14!4@Abs.~4} fordert explizit vom Satzungsgeber, dass er die Richterablehnung selbst regeln muss.
+Damit hat der Gesetzgeber die Richterablehnung komplett in Hände des Satzungsgebers gelegt.
+Daher ist die Richterablehnung tatsächlich ein Gebiet der SGO, in der von einer vollständigen Regelung des Satzungsgebers auszugehen ist und eine analoge Anwendung staatlicher Prozessordnungen grundsätzlich nicht in Betracht kommen.
+Selbt jede konkretisierende Zuhilfenahme staatlicher Prozessordnungen zur Auslegung der Befangenheitsregelungen der SGO ist kritisch zu sehen, da der entsprechende Übernahmewille vom Satzungsgeber in der Satzung zum Ausdruck gebracht sein müsste.
 
 Die Tatbestände des \S~5 Abs.~1 SGO\index[paridx]{SGO!5@\S~5!1@Abs.~1} gliedern sich in drei Gruppen.
 
 Die erste Gruppe von Tatbeständen (Nr.~1 -- Nr.~5) erfassen Konstellationen, in denen die Satzung dem Richter aufgrund seiner persönlichen Nähe zu den \textbf{Verfahrensparteien} nicht zutraut, einen Fall neutral bewerten zu können, ohne dass der Entscheidung der Makel dess Misstrauens der Unparteilichkeit des Richters anhaftet.
 Die Gruppe lässt sich nochmal in zwei Untergruppen unterteilen:
 Die erste Untergruppe (Nr.~1 -- Nr.~3) begründet die Nähe in der personenstandsrechtlichen Nähe zu den Verfahrensparteien und dem darin vermuteten Interessenkonflikt.
-Die zweite Untergruppe (Nr.~4 -- Nr.~5) begründet die Nähe durch die Möglichkeit der Einflussnahme auf die Entscheidungsfindung in der konkreten Sache sowie generell. Auch die Möglichkeit, etwa schon Prozessstrategien oder anderes Vorwissen zum Verfahrensgegenstand aus Sicht der Partei zu kennen, dürfte hier eine Rolle gespielte haben für den Satzungsgeber. Insofern ist die Untergruppe auch verwandt mit der zweiten Gruppe.
+Die zweite Untergruppe (Nr.~4 -- Nr.~5) begründet die Nähe durch die Möglichkeit der Einflussnahme auf die Entscheidungsfindung in der konkreten Sache sowie generell.
+Auch die Möglichkeit, etwa schon Prozessstrategien oder anderes Vorwissen zum Verfahrensgegenstand aus Sicht der Partei zu kennen, dürfte hier eine Rolle gespielt haben für den Satzungsgeber.
+Insofern ist die Untergruppe auch verwandt mit der zweiten Gruppe.
 
 Die zweite Gruppe von Tatbeständen (Nr.~6 -- Nr.~7) erfassen Konstellationen, in denden die Satzung dem Richter aufgrund seiner persönlichen Nähe zum \textbf{Verfahrensgegenstand} nicht zutraut, einen Fall neutral bewerten zu können, ohne dass der Entscheidung der Makel dess Misstrauens der Unparteilichkeit des Richters anhaftet.
 
-Die dritte Gruppe umfasst nur noch einen Tatbestand (Nr.~8), und somit die Konstellation, in denden die Satzung dem Richter aufgrund seiner persönlichen Nähe zum \textbf{Vorverfahren} nicht zutraut, einen Fall neutral bewerten zu können, ohne dass der Entscheidung der Makel dess Misstrauens der Unparteilichkeit des Richters anhaftet. An sich ist das sehr nah an der zweiten Gruppe, aber doch nochmal verschieden.
+Die dritte Gruppe umfasst nur noch einen Tatbestand (Nr.~8), und somit die Konstellation, in denden die Satzung dem Richter aufgrund seiner persönlichen Nähe zum \textbf{Vorverfahren} nicht zutraut, einen Fall neutral bewerten zu können, ohne dass der Entscheidung der Makel dess Misstrauens der Unparteilichkeit des Richters anhaftet.
+An sich ist das sehr nah an der zweiten Gruppe, aber doch nochmal verschieden, da nicht das gerichtliche Verfahren selbst betroffen ist.
 
 \subsubsection{Tatbestand \S~5 Abs.~1 Satz~1 Nr.~1 SGO\index[paridx]{SGO!5@\S~5!1@Abs.~1}}
 \label{Zusammensetzung:Spruchkoerper:Befangenheitsvermutung:Nr1}
 \S~5 Abs.~1 Satz~1 Nr.~1 SGO\index[paridx]{SGO!5@\S~5!1@Abs.~1}
 Es versteht sich von selbst, dass ein Richter in Verfahren, denen er selbst Verfahrenspartei ist, nicht mitentscheiden soll.
-Dies war auch schon vor Einführung des Tatbestandes aus dem allgemeinen Rechtsgrundsatz automatisches Praxis der Parteirechtssprechung,\footnote{So hat das damalige Bundesschiedsgericht es in \cite{BSG3014HS}, \cite{BSG4414HS} und \cite{BSG3215HS} etwa schon gar nicht mehr für nötig gehalten, zur Erläutern, warum der zur ordentlichen Besetzung gehörende Richter Florian Zumkeller-Quast an der tenorierten Entscheidung nicht teilnahm.} wurde aber nun explizit in der Satzung festgehalten.
+Dies war auch schon vor Einführung des Tatbestandes aus dem allgemeinen Rechtsgrundsatz heraus automatisch Praxis der Parteirechtssprechung,\footnote{So hat das damalige Bundesschiedsgericht es in \cite{BSG3014HS}, \cite{BSG4414HS} und \cite{BSG3215HS} etwa schon gar nicht mehr für nötig gehalten, zur Erläutern, warum der zur ordentlichen Besetzung gehörende Richter Florian Zumkeller-Quast an der tenorierten Entscheidung nicht teilnahm.} wurde aber nun explizit in der Satzung festgehalten.
 
 \subsubsection{Tatbestand \S~5 Abs.~1 Satz~1 Nr.~2 SGO\index[paridx]{SGO!5@\S~5!1@Abs.~1}}
 \label{Zusammensetzung:Spruchkoerper:Befangenheitsvermutung:Nr2}
@@ -246,13 +256,14 @@ All dies spricht letzliche dafür, dass der Satzungsgeber hier keine länge anda
 \label{Zusammensetzung:Spruchkoerper:Befangenheitsvermutung:Nr3}
 \S~5 Abs.~1 Satz~1 Nr.~3 SGO\index[paridx]{SGO!5@\S~5!1@Abs.~1} Verfahrenspartei ist, befangen ist.
 Dabei kommt es der Satzung nicht darauf an, ob die Verwandschaft beendet wurde, etwa durch Vaterschaftsanfechtung oder Adoption.
-Entsprechend müssen Richter ihre Verwandschaft zu Verfahrensparteien offenlegen.
-Die Satzung macht keine Vorraussetzungen an den Grad, sodass rein vom Wortlaut her auch sehr entfernte Verwandschafts- und Verschwägerungsgrade eine unwiderlegliche Befangenheitsvermutung begründen würden.
-Daher gebietet der gesetzliche Richter, dass eine Grenze dort zu ziehen ist, wo der Grad so entfernt ist, dass eine Befangenheitsvermutung im allgemeinen nicht mehr durch die bloße Verwandschaft getragen werden kann.
-Bisher gibt es in der Partei keine Rechtsprechung dazu.
-Hier bietet sich daher eine enge Wortlautauslegung an, dass lediglich eine Verwandtschaft in gerade Linie sowie eine Verschwägerung ersten Grades den Tatbestand erfüllen.
-Dies führt zwar dazu, dass schon Geschwister den Tatbestand nicht mehr erfüllen, allerdings lässt sich dies immernoch durch die Möglichkeit der Richterablehnung wegen Besorgnis der Befangenheit für die Fälle, in denen diese tatsächlich notwendig ist, abdecken, während jede andere Wortlautdeutung willkürlich wäre, ohne einen tatsächlichen Anker im Wortlaut, oder aber vermutlich so gut wie alle Parteimitglieder erfassen würde, da auch Verwandtschaften über die Ecke von 40 Generationen und mehr erfasst würden.
-Eine enge Auslegung wird der Rechtsfolge und somit dem Normcharakter eher gerecht, als eine weite Auslegung oder gar ein willkürliche Grenzziehung ohne Verankerung im Wortlaut.
+Entsprechend müssen Richter ihre Verwandschaft zu Verfahrensparteien generell offenlegen.
+Die Satzung macht im Gegensatz zu staatlichen Prozessordnungen vom Wortlaut her keine Vorraussetzungen an den Grad der Verwandschaft oder Verschwägerung, sodass rein vom Wortlaut her auch sehr entfernte Verwandschafts- und Verschwägerungsgrade eine unwiderlegliche Befangenheitsvermutung begründen würden.
+Daher gebietet der gesetzliche Richter, dass eine Grenze spätestens dort zu ziehen ist, wo der Grad so entfernt ist, dass eine Befangenheitsvermutung im allgemeinen nicht mehr durch die bloße Verwandschaft getragen werden kann.
+Bisher gibt es in der Partei keine Rechtsprechung zu diesem Tatbestand.
+Hier bietet sich eine enge Wortlautauslegung an, so dass lediglich eine Verwandtschaft in gerade Linie sowie eine Verschwägerung ersten Grades den Tatbestand erfüllen.
+Dies führt zwar dazu, dass schon Geschwister den Tatbestand nicht mehr erfüllen würden, allerdings lässt sich dies immernoch durch die Möglichkeit der Richterablehnung wegen Besorgnis der Befangenheit für die Fälle, in denen diese tatsächlich notwendig ist, abdecken, während jede andere Grenzziehung innerhalb der Verwandsschaftsgrade willkürlich wäre, ohne einen tatsächlichen Anker im Wortlaut zu haben.
+Die theoretische Alternative, gar keine Granzziehung in der rechtlichen Verwandschaft zu ziehen, würde vermutlich so gut wie alle Parteimitglieder erfassen, da auch Verwandtschaften über die Ecke von 40 oder gar mehr Generationen rechtliche Verwandschaften sind, auch wenn sie seltenst von rechtlicher Erheblichkeit sind.\footnote{Eine Ausnahme stellt hier das unbegrenzte Verwandtenerbrecht dar, vgl. \S~1929 Abs.~1 BGB\index[paridx]{BGB!1929@\S~1929!1@Abs.~1}.}
+Eine sehr enge Auslegung wird der Rechtsfolge und somit dem Normcharakter als absolutes richterliches Mitwirkungsverbot eher gerecht als eine weite Auslegung oder gar eine willkürliche Grenzziehung ohne Verankerung im Wortlaut.
 
 \subsubsection{Tatbestand \S~5 Abs.~1 Satz~1 Nr.~4 SGO\index[paridx]{SGO!5@\S~5!1@Abs.~1}}
 \label{Zusammensetzung:Spruchkoerper:Befangenheitsvermutung:Nr4}
@@ -264,7 +275,7 @@ Auch diese Vorschrift deutet im Übrigen an, dass der Satzungsgeber bei Nr.~3 ke
 Problematisch ist diese Vorschrift dennoch.
 Organe gibt es auf Bundesebene vier: Den Parteitag, den Vorstand, die Gründungsversammlung und das Schiedsgericht.
 Soweit bekannt, haben die bundesweiten Gliederungen kaum weitere Organe eingeführt.
-Mitgliederabstimmungen außerhalb der klassischen ortsgebundenen Parteitagen sind meist als besondere Parteitagstagung (SMV) oder Urabstimmung (BEO) organisiert, Präsidien, Beiräte oder andere Organ gibt es nicht.
+Mitgliederabstimmungen außerhalb der klassischen ortsgebundenen Parteitagen sind meist als besondere Parteitagstagung (SMV) oder Urabstimmung (SDMV, BEO) organisiert, Präsidien, Beiräte oder andere Organ gibt es in der Regel nicht.
 Lediglich der Landesverband Brandenburg hat wohl noch zusätzliche Organe, und zwar seine Arbeitsgemeinschaften.
 Dies dürfte aufgrund der Rarität dieser Regelung kaum im Blickfeld des Bundessatzungsgebers gewesen sein, jedenfalls findet sich weder in der Satzung oder sonst noch wo ein Anhaltspunkt dafür, daher sind derartige zusätzliche Organe für diese Betrachtung vorerst vernachlässigbar, auch wenn die Norm natürlich ebenso für diese gilt.
 
@@ -272,12 +283,13 @@ Schiedsgerichte können nach \S~8 Abs.~7 SGO\index[paridx]{SGO!8@\S~8!7@Abs.~7} 
 
 Mitglieder von Vorständen können nach \S~3 Abs.~6 SGO\index[paridx]{SGO!3@\S~3!6@Abs.~6} nicht Mitglieder eines Schiedsgerichtes sein, da es aber für diesen Tatbestand aufgrund der Präsensformulierung nur auf gegenwärtige Organmitgliedschaften ankommt, kommen für diese Konstellation nur Nr.~2 und Nr.~3 in Betracht, Nr.~1 kann nie verwirklicht werden.
 
-Die Gründungsversammlung ist von ihrer Natur her in der Piratenpartei dem Parteitag gleich und wird daher wie dieser betrachtet. Das Bundesschiedsgericht hat in seiner Entscheidung\footnote{\cite{BSGPP100127862}.} zu ebendiesem Tatbestand entschieden, dass nur Organe der \enquote{Exekutive} erfasst seien, und damit gerade der Parteitag und somit auch die Grundsversammlung als satzungsgebendes (oder auch: rechtsetzendes) Organ und somit Organ der \enquote{Legislative} schon gar nicht erfasst wäre.
+Die Gründungsversammlung ist von ihrer Natur her in der Piratenpartei dem Parteitag gleich und wird daher wie dieser betrachtet.
+Das Bundesschiedsgericht hat in seiner Entscheidung\footnote{\cite{BSGPP100127862}.} zu ebendiesem Tatbestand entschieden, dass nur Organe der \enquote{Exekutive} erfasst seien, und damit gerade der Parteitag und somit auch die Grundsversammlung als satzungsgebendes (oder auch: rechtsetzendes) Organ und somit Organ der \enquote{Legislative} schon gar nicht erfasst wäre.
 Diese Auslegung findet schon keinen Halt im Wortlaut, sondern würde eine Reduktion nach dem Sinn der Norm darstellen.
 Warum diese geboten sein soll, hat das Bundesschiedsgericht nicht begründet.
 Im Gegenteil, der Tatbestand von Nr.~1 in Verbindung mit Nr.~4 könnte in dieser Auslegung des Bundesschiedsgerichtes schon in gar keiner denkbaren Situation verwirklicht werden, wäre also eine leere Norm.
 Nach der systematischen Auslegung darf es aber keine leeren Normen geben, da jede Regelung irgendeinen Sinn und Zweck hat.\footnote{Siehe zur systematischen Auslegung auch \ref{Normenauslegung:Auslegung:Methoden:Systematisch}.}
-Daher ist die nicht weiter begründete Auslegung des Bundesschiedsgerichtes nicht haltbar, vielmehr sind Parteitage gerade nach dem dem Wortlaut entnehmenbaren Willen des Satzungsgebers auch erfasst.
+Daher ist die nicht weiter begründete Auslegung des Bundesschiedsgerichtes nicht haltbar, vielmehr sind Parteitage gerade nach dem dem Wortlaut entnehmenbaren Willen des Satzungsgebers auch erfasst.\footnote{Zu diesem Ergebnis kommt nach ausführlicher Betrachtung auch \cite[2 ff. mwN.]{LSGBB153}.}
 
 Dies führt jedoch dazu, dass Landesschiedgerichte nie Anfechtungen gegen Entscheidungen ihres eigenen Landesparteitages verhandeln dürfen, da alle Richter zugleich Mitglieder des Landesverbandes sind und als solches Mitglieder des Organs Parteitag.
 Das Organ darf hier nicht mit der Tagung des Organ verwechselt werden, da jedes Organ, also auch der Parteitag, außerhalb seiner Zusammentreffen weiter existiert.
