--- a/sghandbuch.bib
+++ b/sghandbuch.bib
@@ -214,7 +214,16 @@
   sign = {LSG Bbg 13/5},
   date = {2014-07-09},
   gender = {sn},
-  url = {https://wiki.piratenbrandenburg.de/images/f/f2/LSG-Bbg-13-5\_Urteil\_2014\_07\_09.pdf}
+  url = {https://wiki.piratenbrandenburg.de/Datei:LSG-Bbg-13-5\_Urteil\_2014\_07\_09.pdf}
+}
+@RULING{LSGBB153,
+  court = {Landesschiedsgericht~Brandenburg},
+  shortcourt = {LSG~BB},
+  decisiontype = {Urteil},
+  sign = {LSG Bbg 15/3},
+  date = {2015-10-27},
+  gender = {sn},
+  url = {https://wiki.piratenbrandenburg.de/Datei:LSG-Bbg-15-3\_Urteil\_2015\_10\_27.pdf}
 }
 @RULING{LSGNRW2013011,
   court = {Landesschiedsgericht~Nordrhein-Westfalen},
